Fixed scrollbar

--- a/styles.css
+++ b/styles.css
@@ -7,15 +7,21 @@ html {
 }
 
 #body {
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 #body-container {
     overflow-x: hidden;
+    overflow-y: hidden;
+    scroll-behavior: smooth;
     position: absolute;
     width: 100%;
     height: 100%;
     -webkit-overflow-scrolling: touch;
+}
+
+#body-container::-webkit-scrollbar {
+  display: none;
 }
 
 #navbar {
